--- a/app/src/main/res/layout/activity_act_create.xml
+++ b/app/src/main/res/layout/activity_act_create.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.luoshuimumu.traveldiary.model.ActCreate">
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:id="@+id/tag"
@@ -118,8 +125,5 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ViewPager
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ViewPager>
-</RelativeLayout>
+
+</LinearLayout>
