--- a/app/src/main/res/layout/fragment_frag_llist_text.xml
+++ b/app/src/main/res/layout/fragment_frag_llist_text.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.luoshuimumu.traveldiary.model.frag.FragLlistText">
+    tools:context="com.example.luoshuimumu.traveldiary.model.frag.FragListText">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="text" />
 
 
 </FrameLayout>
