--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/action_new_media"
         android:actionViewClass="android.widget.SearchView"
-        android:icon="@drawable/ic_launcher"
         android:orderInCategory="100"
-        android:title="search"
+        android:title="New"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_group"
@@ -17,19 +16,9 @@
         <menu>
             <group>
                 <item
-                    android:id="@+id/action_settings"
-                    android:orderInCategory="100"
-                    android:title="@string/action_settings"
-                    app:showAsAction="never" />
-                <item
                     android:id="@+id/action_change_ui"
                     android:orderInCategory="100"
                     android:title="Ui"
-                    app:showAsAction="never" />
-                <item
-                    android:id="@+id/action_logout"
-                    android:orderInCategory="100"
-                    android:title="Logout"
                     app:showAsAction="never" />
             </group>
         </menu>
