--- a/app/src/main/res/layout/activity_act_create.xml
+++ b/app/src/main/res/layout/activity_act_create.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.luoshuimumu.traveldiary.model.ActCreate">
+    tools:context="com.example.luoshuimumu.traveldiary.modle.Act.ActCreate">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/content"
