--- a/app/src/main/res/layout/activity_act_new_audio.xml
+++ b/app/src/main/res/layout/activity_act_new_audio.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.luoshuimumu.traveldiary.model.ActNewAudio">
+    tools:context="com.example.luoshuimumu.traveldiary.modle.Act.ActNewAudio">
 
     <Button
         android:layout_width="wrap_content"
