--- a/app/src/main/res/layout/activity_act_new_trace.xml
+++ b/app/src/main/res/layout/activity_act_new_trace.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.luoshuimumu.traveldiary.model.ActNewTrace">
+    tools:context="com.example.luoshuimumu.traveldiary.modle.Act.ActNewTrace">
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/act_trace_mapview"
