--- a/app/src/main/res/layout/fragment_frag_llist_text.xml
+++ b/app/src/main/res/layout/fragment_frag_llist_text.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.luoshuimumu.traveldiary.model.frag.FragListText">
+    tools:context="com.example.luoshuimumu.traveldiary.modle.frag.FragListText">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
