--- a/app/src/main/res/layout/fragment_frag_list_pic.xml
+++ b/app/src/main/res/layout/fragment_frag_list_pic.xml
@@ -13,7 +13,7 @@
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left|top" />
 
