--- a/app/src/main/res/layout/widget_frag_pic_listitem.xml
+++ b/app/src/main/res/layout/widget_frag_pic_listitem.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="tv_title" />
+    <CheckBox
+        android:id="@+id/cb_choosed"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:gravity="center_horizontal"
+        android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/tv_content"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="tv_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/cb_choosed"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="tv_title" />
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="tv_content" />
+    </LinearLayout>
+
+
+</RelativeLayout>
