--- a/app/src/main/res/layout/widget_frag_video_listitem.xml
+++ b/app/src/main/res/layout/widget_frag_video_listitem.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_thumbnail"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:id="@+id/cb_choosed"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:gravity="center_horizontal"
+        android:visibility="invisible" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/cb_choosed"
+        android:layout_toRightOf="@id/iv_thumbnail"
         android:orientation="vertical">
 
         <TextView
@@ -27,4 +37,8 @@
             android:text="tv_content" />
     </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
+
+
+
