--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,11 @@
         <menu>
             <group>
                 <item
+                    android:id="@+id/action_edit_mode"
+                    android:orderInCategory="100"
+                    android:title="E_MODE"
+                    app:showAsAction="never" />
+                <item
                     android:id="@+id/action_change_ui"
                     android:orderInCategory="100"
                     android:title="Ui"
