--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -25,6 +25,11 @@
                     android:orderInCategory="100"
                     android:title="Ui"
                     app:showAsAction="never" />
+                <item
+                    android:id="@+id/action_create_diary"
+                    android:orderInCategory="100"
+                    android:title="Create"
+                    app:showAsAction="never" />
             </group>
         </menu>
     </item>
